Fix character encoding issues

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -264,7 +264,7 @@
         }
         
         .skill-items li:before {
-            content: "â€¢";
+            content: "•¢";
             position: absolute;
             left: 0;
             color: var(--accent-teal);
