Fix QR code image paths to display correctly

--- a/index.html
+++ b/index.html
@@ -1020,28 +1020,28 @@
         
         <div class="qr-section no-break">
             <div class="qr-item">
-                <img src="../assets/QR_tableau_portfolio.png" alt="Tableau QR" onerror="this.style.display='none';this.nextElementSibling.style.display='flex';" />
+                <img src="QR_tableau_portfolio.png" alt="Tableau QR" onerror="this.style.display='none';this.nextElementSibling.style.display='flex';" />
                 <div class="qr-placeholder" style="display:none;">QR Code</div>
                 <div class="qr-label">
                     <a href="https://public.tableau.com/app/profile/fathallah.elmasri" target="_blank">Tableau Dashboards</a>
                 </div>
             </div>
             <div class="qr-item">
-                <img src="../assets/QR_github.png" alt="GitHub QR" onerror="this.style.display='none';this.nextElementSibling.style.display='flex';" />
+                <img src="QR_github.png" alt="GitHub QR" onerror="this.style.display='none';this.nextElementSibling.style.display='flex';" />
                 <div class="qr-placeholder" style="display:none;">QR Code</div>
                 <div class="qr-label">
                     <a href="https://github.com/Elmasri-Fathallah" target="_blank">Analytics Code</a>
                 </div>
             </div>
             <div class="qr-item">
-                <img src="../assets/QR_linkedin.png" alt="LinkedIn QR" onerror="this.style.display='none';this.nextElementSibling.style.display='flex';" />
+                <img src="QR_linkedin.png" alt="LinkedIn QR" onerror="this.style.display='none';this.nextElementSibling.style.display='flex';" />
                 <div class="qr-placeholder" style="display:none;">QR Code</div>
                 <div class="qr-label">
                     <a href="https://www.linkedin.com/in/fathallah-elmasri" target="_blank">LinkedIn Profile</a>
                 </div>
             </div>
             <div class="qr-item">
-                <img src="../assets/QR_email.png" alt="Email QR" onerror="this.style.display='none';this.nextElementSibling.style.display='flex';" />
+                <img src="QR_email.png" alt="Email QR" onerror="this.style.display='none';this.nextElementSibling.style.display='flex';" />
                 <div class="qr-placeholder" style="display:none;">QR Code</div>
                 <div class="qr-label">
                     <a href="mailto:fathallah.elmasri@gmail.com">Email Contact</a>
